# Benderer

./: .gitignore  ARCHITECTURE_ANALYSIS.md  Benderer_test  CMakeLists.txt  README.md  benderer.h  benderer_stb_image.h  bvh.h  camera.h  changes.diff  color.h  constant_medium.h  hittable.h  interval.h  main.cpp  material.h  onb.h  output.ppm  pdf.h  perlin.h  preview.ppm  quad.h  ray.h  run.sh  sphere.h  texture.h  vec3.h
source/: benderer.h  main.cpp
source/image/: image_info.h  image_info_library.h
source/image/post/: post_process.h
source/image/writer/: image_writer.h  png_writer.h  psix_writer.h  stb_impl.cpp
source/integrators/: bd_medium_path_tracer.h  integrator.h  is_medium_path_tracer.h  is_path_tracer.h  mips_model.h  mis_medium_path_tracer.h  one_step_shadow.h  rr_medium_path_tracer.h  rtw_model.h  simple_medium_path_tracer.h  simple_path_tracer.h
source/records/: interaction.h  intersection.h  light_sample.h  medium_hit.h  medium_hit_rec.h  medium_intersection.h  medium_scatter_rec.h  path.h  path_result.h  path_state.h  path_vertex.h  pdf_rec.h  scatter_record.h  surface_hit.h  surface_hit_rec.h  surface_scatter_rec.h
source/samplers/: direct_light_sampler.h  medium_sampler.h
source/scene/: camera.h  object_library.h  scene.h  scene_library.h  world.h
source/scene/hittables/: bvh.h  constant_medium.h  hittable.h  hittable_list.h  primitive.h  transformed.h
source/scene/hittables/mediums/: medium.h  medium_list.h  medium_tree.h  primitive_medium.h  transformed_medium.h
source/scene/hittables/primatives/: constant_medium.h  primitive.h  quad.h  sphere.h
source/scene/hittables/surfaces/: primitive_surface.h  surface.h  surface_list.h  surface_tree.h  transformed_surface.h
source/scene/hittables/transforms/: rotate_y.h  transform.h  translate.h
source/scene/material/: material.h  medium_material.h  surface_material.h
source/scene/material/materials/: emissive.h  mat_dielectric.h  mat_diffuse_light.h  mat_isotropic.h  mat_lambertian.h  mat_metal.h
source/scene/material/medium materials/: medium_mat_constant.h  medium_mat_grid.h  medium_mat_hg_constant.h
source/scene/material/medium_material/: medium_mat_constant.h
source/scene/material/surface materials/: emissive.h  mat_dielectric.h  mat_lambertian.h  mat_metal.h
source/scene/mediums/: medium.h
source/scene/mediums/phase_functions/: phase_function.h
source/scene/shapes/: shape.h
source/scene/shapes/flats/: flat.h  quad.h
source/scene/shapes/solids/: box.h  solid.h  sphere.h
source/scene/skyboxes/: gradient_skybox.h  skybox.h  solid_color_skybox.h
source/scene/texture/: texture.h
source/scene/texture/textures/: tex_checker.h  tex_image.h  tex_noise.h  tex_solid_colour.h
source/scene/transforms/: rotate_y.h  transform.h  translate.h
source/structures/: aabb.h  density_grid.h  interval.h  light_sample.h  onb.h  path_result.h  path_state.h  pdf.h  ray.h  scatter_record.h  vec3.h
source/utility/: benderer_image.h  benderer_stb_image.h  benderer_stb_image_impl.cpp  color.h  perlin.h  time.h
source/utility/Color/: color.h  sampled_spectrum.h
source/utility/Color/spectra/: constant_spectrum.h
source/utility/color/: spectrum.h
unused_source/: bvh.h  constant_medium.h  hittable_list.h  mat_isotropic.h  medium_mat_constant.h  medium_material.h  mips_model.h  mips_model_2.h  one_step_shadow.h  primative_medium.h  quad_prim.h  rtw_model.h  sphere_prim.h
