cmake_minimum_required(VERSION 3.31)
project(Benderer)

set(CMAKE_CXX_STANDARD 20)

add_executable(Benderer source/main.cpp
        source/structures/vec3.h
        source/utility/color.h
        source/structures/ray.h
        source/scene/hittables/hittable.h
        unused_source/sphere_prim.h
        source/scene/hittables/hittable_list.h
        source/benderer.h
        source/structures/interval.h
        source/scene/camera.h
        source/scene/material/material.h
        source/structures/aabb.h
        source/scene/hittables/bvh.h
        source/scene/texture/texture.h
        source/utility/benderer_stb_image.h
        source/utility/perlin.h
        unused_source/quad_prim.h
        unused_source/constant_medium.h
        source/structures/onb.h
        source/structures/pdf.h
        source/scene/texture/textures/tex_solid_colour.h
        source/scene/texture/textures/tex_checker.h
        source/scene/texture/textures/tex_image.h
        source/scene/texture/textures/tex_noise.h
        source/scene/material/materials/mat_lambertian.h
        source/scene/material/materials/mat_isotropic.h
        source/scene/material/materials/mat_dielectric.h
        source/scene/material/materials/mat_metal.h
        source/scene/material/materials/mat_diffuse_light.h
        source/scene/scene.h
        source/scene/scene_library.h
        source/image/image_info.h
        source/records/scatter_record.h
        source/image/image_info_library.h
        source/records/light_sample.h
        source/scene/hittables/primitive.h
        source/scene/transforms/transform.h
        source/scene/transforms/translate.h
        source/scene/transforms/rotate_y.h
        unused_source/rtw_model.h
        source/integrators/integrator.h
        source/scene/skyboxes/skybox.h
        source/scene/skyboxes/gradient_skybox.h
        source/scene/skyboxes/solid_color_skybox.h
        unused_source/mips_model.h
        unused_source/one_step_shadow.h
        source/records/path_state.h
        source/records/path_result.h
        unused_source/mips_model_2.h
        source/integrators/simple_path_tracer.h
        source/scene/world.h
        source/records/surface_hit.h
        source/scene/mediums/medium.h
        source/records/medium_hit.h
        source/scene/mediums/phase_functions/phase_function.h
        source/scene/shapes/shape.h
        source/records/intersection.h
        source/records/interaction.h
        source/scene/shapes/solids/sphere.h
        source/scene/shapes/flats/quad.h
        source/scene/shapes/flats/flat.h
        source/scene/shapes/solids/solid.h
        source/scene/hittables/transformed.h
        source/scene/object_library.h
        source/utility/benderer_stb_image_impl.cpp
)
